K1J-475: Added salt to hashed personId in thrown exception