@@ -37,7 +37,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import org.junit.Before;
 import org.junit.Test;
@@ -75,21 +74,15 @@ import se.inera.intyg.intygstjanst.web.service.MonitoringLogService;
 import se.inera.intyg.intygstjanst.web.service.RelationService;
 import se.inera.intyg.intygstjanst.web.service.SjukfallCertificateService;
 import se.inera.intyg.intygstjanst.web.service.StatisticsService;
-import se.inera.intyg.intygstjanst.web.service.bean.Recipient;
 import se.inera.intyg.intygstjanst.web.service.builder.RecipientBuilder;
 import se.inera.intyg.schemas.contract.Personnummer;
 
 @RunWith(MockitoJUnitRunner.class)
 public class CertificateServiceImplTest {
 
-    private static final Personnummer PERSONNUMMER = Personnummer.createPersonnummer("191212121212").get();
+    private static final Personnummer PERSONNUMMER = Personnummer.createPersonnummer("191212121212").orElseThrow();
     private static final String CERTIFICATE_ID = "<certificate-id>";
-
     private static final String RECIPIENT_ID = "FKASSA";
-    private static final String RECIPIENT_NAME = "Försäkringskassan";
-    private static final String RECIPIENT_LOGICALADDRESS = "FKORG";
-    private static final String RECIPIENT_CERTIFICATETYPES = "fk7263";
-
     private static final String HSVARD_ID = "HSVARD";
     private static final String PERSONNUMMER_HASH = "personnummerHash";
 
@@ -131,23 +124,6 @@ public class CertificateServiceImplTest {
 
     @InjectMocks
     private CertificateServiceImpl certificateService;
-
-    private Certificate createCertificate() {
-        Certificate certificate = new Certificate(CERTIFICATE_ID);
-        certificate.setCivicRegistrationNumber(PERSONNUMMER);
-        return certificate;
-    }
-
-    private Recipient createRecipient() {
-        return new RecipientBuilder()
-            .setLogicalAddress(RECIPIENT_LOGICALADDRESS)
-            .setName(RECIPIENT_NAME)
-            .setId(RECIPIENT_ID)
-            .setCertificateTypes(RECIPIENT_CERTIFICATETYPES)
-            .setActive(true)
-            .setTrusted(true)
-            .build();
-    }
 
     @Before
     public void setup() {
@@ -197,13 +173,13 @@ public class CertificateServiceImplTest {
 
         assertEquals("id", certificate.getId());
         assertEquals(1, certificate.getStates().size());
-        assertEquals(CertificateState.RECEIVED, certificate.getStates().get(0).getState());
-        assertEquals("HSVARD", certificate.getStates().get(0).getTarget());
+        assertEquals(CertificateState.RECEIVED, certificate.getStates().getFirst().getState());
+        assertEquals("HSVARD", certificate.getStates().getFirst().getTarget());
 
         LocalDateTime aMinuteAgo = LocalDateTime.now().minusMinutes(1);
         LocalDateTime inAMinute = LocalDateTime.now().plusMinutes(1);
-        assertTrue(certificate.getStates().get(0).getTimestamp().isAfter(aMinuteAgo));
-        assertTrue(certificate.getStates().get(0).getTimestamp().isBefore(inAMinute));
+        assertTrue(certificate.getStates().getFirst().getTimestamp().isAfter(aMinuteAgo));
+        assertTrue(certificate.getStates().getFirst().getTimestamp().isBefore(inAMinute));
 
         verify(certificateDao).store(certificate);
         verify(relationService).storeRelation(any(Relation.class));
@@ -292,7 +268,7 @@ public class CertificateServiceImplTest {
     public void testSendRevokedCertificate() throws Exception {
         Certificate revokedCertificate = new Certificate(CERTIFICATE_ID);
         revokedCertificate
-            .setStates(Arrays.asList(new CertificateStateHistoryEntry("target", CertificateState.CANCELLED, LocalDateTime.now())));
+            .setStates(List.of(new CertificateStateHistoryEntry("target", CertificateState.CANCELLED, LocalDateTime.now())));
         when(certificateDao.getCertificate(PERSONNUMMER, CERTIFICATE_ID)).thenReturn(revokedCertificate);
         certificateService.sendCertificate(PERSONNUMMER, CERTIFICATE_ID, "fkassa");
     }
@@ -380,7 +356,7 @@ public class CertificateServiceImplTest {
 
     @Test
     public void testListCertificatesForCitizen() {
-        final List<String> certificateTypes = Arrays.asList("fk7263");
+        final List<String> certificateTypes = List.of("fk7263");
         final LocalDate fromDate = LocalDate.now();
         final LocalDate toDate = fromDate.plusDays(2);
         certificateService.listCertificatesForCitizen(PERSONNUMMER, certificateTypes, fromDate, toDate);
@@ -389,7 +365,7 @@ public class CertificateServiceImplTest {
 
     @Test
     public void testListCertificatesForCare() {
-        final List<String> careUnits = Arrays.asList("enhet-1");
+        final List<String> careUnits = List.of("enhet-1");
         certificateService.listCertificatesForCare(PERSONNUMMER, careUnits);
         verify(certificateDao).findCertificate(PERSONNUMMER, null, null, null, careUnits);
     }
